==> weijianx/cap/GD32E103_cap-RTU -/BSP/PCap.c <==
#include "BSP.h"
#define SET_SCK             gpio_bit_set(GPIOB, GPIO_PIN_3)
#define CLR_SCK             gpio_bit_reset(GPIOB, GPIO_PIN_3)
#define SET_MOSI            gpio_bit_set(GPIOB, GPIO_PIN_5)
#define CLR_MOSI            gpio_bit_reset(GPIOB, GPIO_PIN_5)
#define SET_SSN             gpio_bit_set(GPIOA, GPIO_PIN_15)
#define CLR_SSN             gpio_bit_reset(GPIOA, GPIO_PIN_15)
#define READ_MISO			gpio_input_bit_get(GPIOB, GPIO_PIN_4)

void SPI_Enable(void)
{
    gpio_bit_reset(GPIOA, GPIO_PIN_15);

//    for(unsigned long i = 0; i < 7; i++)    
//    __NOP();
//    __NOP();
//    __NOP();
//    __NOP();
//    __NOP();
//    __NOP();
//    __NOP();
//    __NOP();
//    __NOP();
}

void SPI_Disable(void)
{	
    gpio_bit_set(GPIOA, GPIO_PIN_15);
//    __NOP();
//    __NOP();
//    __NOP();
}

void PCap_SPI_Init(void)
{

  	rcu_periph_clock_enable(RCU_GPIOB);
	rcu_periph_clock_enable(RCU_GPIOA);
	rcu_periph_clock_enable(RCU_AF);
    
	gpio_pin_remap_config(GPIO_SWJ_SWDPENABLE_REMAP, ENABLE);
	
	
    gpio_init( GPIOA, GPIO_MODE_OUT_PP, GPIO_OSPEED_50MHZ, GPIO_PIN_15);
	
	gpio_init( GPIOB, GPIO_MODE_OUT_PP, GPIO_OSPEED_50MHZ, GPIO_PIN_3);
	
	gpio_init( GPIOB, GPIO_MODE_IPD, GPIO_OSPEED_50MHZ, GPIO_PIN_4);
	
	gpio_init( GPIOB, GPIO_MODE_OUT_PP, GPIO_OSPEED_50MHZ, GPIO_PIN_5);
	
}

void PCap_Init(void)
{
    unsigned short wrSRAMCnt = 0;
    
    PCap_SPI_Init();
    rt_thread_delay(1);
    
	PCap_Reset();				//上电复位
	rt_thread_delay(1);
    
    do{
        //before this, wdog is no initiate, so don't feed the wdog in here
        ulWritePCAPXramErr = PCap_WR_SRAM();
        if(0 == ulWritePCAPXramErr)
            break;
        wrSRAMCnt++;
        Delay_Us(10);
    }
    while(wrSRAMCnt < 10);
    Delay_Us(10);

    PCap_Reg_Config();			//配置寄存器
    Delay_Us(10);

    PCap_Enable();				//启动PCap芯片
    rt_thread_delay(1);

    PCap_PTL_Reset();			//部分上电复位（SRAM和配置寄存器值不变）
    rt_thread_delay(1);

    PCap_MEASURE(); 					//测量当前点
    rt_thread_delay(1);

	//Capture_TimerInit();
}

void resetPcap(void)
{
    static unsigned char ucResetCnt = 0;
    unsigned short wrSRAMCnt = 0;

    if(++ucResetCnt >= 3)
    {
        ucResetCnt = 0;
        //reboot
        NVIC_SystemReset(); //define in ..\IAR Systems\Embedded Workbench 7.0\arm\CMSIS\Include\core_cm0.h
        while(1)
        {;}
    }
    else
    {
        //disable timer interrupt
//        TIM_ITConfig(TIM3, TIM_IT_Update, DISABLE);
//        TIM_Cmd(TIM3, DISABLE);
//        TIM_ClearITPendingBit(TIM3, TIM_IT_Update);
		timer_interrupt_disable(TIMER2, TIMER_INT_UP);
		timer_disable(TIMER2);
		timer_interrupt_flag_clear(TIMER2, TIMER_INT_FLAG_UP);
		
        //Disable pcap, if SPI is work normally, the action will quickly reset pcap,and shut down the convert
        PCap_Reset();
        
        //initiate pcap
    
        PCap_SPI_Init();
        rt_thread_delay(1);
        
    	PCap_Reset();				//上电复位
    	rt_thread_delay(1);
        
        do{
#if IWDG_EN > 0
            fwdgt_counter_reload();
#endif
            if(0 == PCap_WR_SRAM())
                break;
            wrSRAMCnt++;
            Delay_Us(10);
        }
        while(wrSRAMCnt < 10);
        Delay_Us(10);
        
    	PCap_Reg_Config();			                                //配置寄存器
    	Delay_Us(10);

#if IWDG_EN > 0
        fwdgt_counter_reload();
#endif

    	PCap_Enable();				                                //启动PCap芯片
    	rt_thread_delay(1);

    	PCap_PTL_Reset();			                                //部分上电复位（SRAM和配置寄存器值不变）
        rt_thread_delay(1);

    	PCap_MEASURE(); 					                //测量当前点
    }
}
