==> Soway-code/test/packages/pcap/src/PCap.c <==
#include "BSP.h"
#include "sensor_dallas_ds18b20.h"
#define SET_SCK             HAL_GPIO_WritePin(GPIOB, GPIO_PIN_3, GPIO_PIN_SET);
#define CLR_SCK             HAL_GPIO_WritePin(GPIOB, GPIO_PIN_3, GPIO_PIN_RESET);
#define SET_MOSI            HAL_GPIO_WritePin(GPIOB, GPIO_PIN_5, GPIO_PIN_SET);
#define CLR_MOSI            HAL_GPIO_WritePin(GPIOB, GPIO_PIN_5, GPIO_PIN_RESET);
#define SET_SSN             HAL_GPIO_WritePin(GPIOA, GPIO_PIN_15, GPIO_PIN_SET);
#define CLR_SSN             HAL_GPIO_WritePin(GPIOA, GPIO_PIN_15, GPIO_PIN_RESET);
#define READ_MISO			HAL_GPIO_ReadPin(GPIOB, GPIO_PIN_4)

void SPI_Enable(void)
{
   // GPIO_ResetBits(GPIOA, GPIO_Pin_15);
		HAL_GPIO_WritePin(GPIOA, GPIO_PIN_15, GPIO_PIN_RESET);

    for(unsigned long i = 0; i < 7; i++)    
    __NOP();
    __NOP();
    __NOP();
    __NOP();
    __NOP();
    __NOP();
    __NOP();
    __NOP();
		__NOP();
}

void SPI_Disable(void)
{	
//  GPIO_SetBits(GPIOA, GPIO_Pin_15);
		HAL_GPIO_WritePin(GPIOA, GPIO_PIN_15, GPIO_PIN_SET);
    __NOP();
    __NOP();
    __NOP();
}

void PCap_SPI_Init(void)
{
		GPIO_InitTypeDef GPIO_InitStruct;
    /* Enable SCK, MOSI, MISO and NSS GPIO clocks */
  //  RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOA | RCC_AHBPeriph_GPIOB, ENABLE);    
	__HAL_RCC_GPIOA_CLK_ENABLE();
	__HAL_RCC_GPIOB_CLK_ENABLE();
    /* SPI SCK pin configuration */
	GPIO_InitStruct.Pin = GPIO_PIN_3;
	GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStruct.Pull = GPIO_PULLDOWN;
	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
	HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);

    /* SPI  MOSI pin configuration */
	GPIO_InitStruct.Pin = GPIO_PIN_5;
	GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStruct.Pull = GPIO_PULLDOWN;
	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
	HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);

    /* SPI MISO pin configuration */
	GPIO_InitStruct.Pin = GPIO_PIN_4;
	GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
	GPIO_InitStruct.Pull = GPIO_PULLDOWN;
	HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);

    /* software Chip Select pin Configuration*/
	GPIO_InitStruct.Pin = GPIO_PIN_15;
	GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStruct.Pull = GPIO_PULLDOWN;
	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
	HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);

}

void PCap_Init(void)
{
    unsigned short wrSRAMCnt = 0;
    
    PCap_SPI_Init();
//    Delay_Ms(1);
    rt_thread_mdelay(1);
  	PCap_Reset();				//上电复位
	rt_thread_mdelay(1);
    
    do{
        //before this, wdog is no initiate, so don't feed the wdog in here
        ulWritePCAPXramErr = PCap_WR_SRAM();
        if(0 == ulWritePCAPXramErr)
            break;
        wrSRAMCnt++;
		rt_thread_mdelay(10);
    }
    while(wrSRAMCnt < 10);
//    Delay_Us(10);
    rt_hw_us_delay(10);
    PCap_Reg_Config();			//配置寄存器
    rt_hw_us_delay(10);

    PCap_Enable();				//启动PCap芯片
    rt_hw_us_delay(1);

    PCap_PTL_Reset();			//部分上电复位（SRAM和配置寄存器值不变）
    rt_hw_us_delay(1);

    PCap_MEASURE(); 					//测量当前点
    rt_hw_us_delay(1);

	//Capture_TimerInit();
}

void resetPcap(void)
{
    static unsigned char ucResetCnt = 0;
    unsigned short wrSRAMCnt = 0;

    if(++ucResetCnt >= 3)
    {
        ucResetCnt = 0;
        //reboot
        NVIC_SystemReset(); //define in ..\IAR Systems\Embedded Workbench 7.0\arm\CMSIS\Include\core_cm0.h
        while(1)
        {;}
    }
    else
    {
        //disable timer interrupt
//        TIM_ITConfig(TIM3, TIM_IT_Update, DISABLE);
//        TIM_Cmd(TIM3, DISABLE);
//        TIM_ClearITPendingBit(TIM3, TIM_IT_Update);
    	 __HAL_TIM_CLEAR_IT(&TIM3_Handler, TIM_IT_UPDATE);
        //Disable pcap, if SPI is work normally, the action will quickly reset pcap,and shut down the convert
        PCap_Reset();
        
        //initiate pcap
    
        PCap_SPI_Init();
        rt_thread_mdelay(1);
        
    	PCap_Reset();				//上电复位
    	rt_thread_mdelay(1);
        
        do{
//#if IWDG_EN > 0
//            IWDG_ReloadCounter();
//#endif
            if(0 == PCap_WR_SRAM())
                break;
            wrSRAMCnt++;
            rt_hw_us_delay(10);
        }
        while(wrSRAMCnt < 10);
        rt_hw_us_delay(10);
        
    	PCap_Reg_Config();			                                //配置寄存器
    	rt_hw_us_delay(10);

//#if IWDG_EN > 0
//        IWDG_ReloadCounter();
//#endif

    	PCap_Enable();				                                //启动PCap芯片
    	rt_thread_mdelay(1);

    	PCap_PTL_Reset();			                                //部分上电复位（SRAM和配置寄存器值不变）
        rt_thread_mdelay(1);

    	PCap_MEASURE(); 					                //测量当前点
    }
}
